extends Control

func _on_back_menu_pressed():
	get_tree().change_scene_to_file("res://scenes/menu.tscn")


func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://scenes/level1.tscn")


func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://scenes/level2.tscn")


func _on_level_3_pressed():
	get_tree().change_scene_to_file("res://scenes/level3.tscn")


func _on_level_4_pressed():
	get_tree().change_scene_to_file("res://scenes/level1.tscn")


func _on_level_5_pressed():
	get_tree().change_scene_to_file("res://scenes/level1.tscn")


func _on_level_6_pressed():
	get_tree().change_scene_to_file("res://scenes/level1.tscn")
